# platform-golden-path

./: Makefile  README.md
.azure-pipelines/: backend-pr-checks.yml  release-pipeline.yml
backend/: docker-compose.langgraph.yml  docker-compose.phoneix.yml
backend/.azure-pipelines/: backend-pr-checks.yml
backend/fastapi/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
backend/fastapi/alembic/: env.py
backend/fastapi/app/: main.py
backend/fastapi/app/config/: db.py  settings.py
backend/fastapi/app/tests/: conftest.py
infrastructure/k8s/staging/: 03-redis.yaml  04-qdrant.yaml  07-cert-manager.yaml  08-velero-schedule.yaml
infrastructure/terraform/: outputs.tf  variables.tf
infrastructure/terraform/environments/: prod.tfvars
scripts/: create-release-tag.sh  deploy-to-k8s.sh  infisical_to_env.py  send-notification.sh  update-k8s-image-tags.sh  verify-deployment-health.sh
scripts/infrastructure/k8s/staging/: 00-namespace.yaml  01-infisical-sync-crd.yaml  05-fastapi-app.yaml  06-celery-worker.yaml  06-ingress.yaml  velero-snapshot-class.yaml
scripts/infrastructure/terraform/: README.md  main.tf
scripts/infrastructure/terraform/environments/: dev.tfvars
